...
        {
            key: "home",
            icon: "home",
            label: t("HOME_I18N.string"),
            href: "/(app)",
            isActive: isHomeActive,
            testID: "nav-home",
        },
        {
            key: "analytics",
            icon: "analytics",
            label: t("DASHBOARD_I18N.string"),
            href: "/(app)/hosted-dashboard",
            isActive: isAnalyticsActive,
            testID: "nav-dashboard",
        },
        {
            key: "settings",
            icon: "settings",
            label: t("SETTINGS_I18N.string"),
            href: "/(app)/settings",
...
